--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "blog-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "node test-api.js"
   },
